# stunning-enigma

./: Cargo.toml  LICENSE  README.md  stunning_enigma.js
.github/workflows/: ci.yaml  release.yaml
assets/kenney-fonts/: LICENSE
assets/kenney-pirate-pack/: LICENSE
src/: assets.rs  controls.rs  main.rs  main_menu.rs  player.rs  state.rs  utils.rs
src/scenes/: in_game.rs  loading.rs  main_menu.rs  mod.rs
wasm/: index.html
