[package]
name = "stunning_enigma"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_asset_loader = "0.10.0"
bevy_config_cam = "0.3.0"
bevy_egui = "0.14.0"
bevy_mod_picking = "0.6.1"
bevy_tweening = "0.4.0"
big-brain = "0.11.0"
heron = "3.0.1"
iyes_loopless = "0.5.1"
leafwing-input-manager = "0.3.0"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
console_error_panic_hook = "0.1.7"

[dependencies.mimalloc]
version = "0.1.29"
default-features = false
features = ["secure"]

[dependencies.bevy]
version = "0.7"
default-features = false
features = [
    ## default features
    "animation", # Animation support
    "bevy_gilrs", # Gamepad input support
    # "bevy_audio", # Builtin audio
    "bevy_winit", # Window management
    "filesystem_watcher", # Asset hot-reloading
    # "render", # Graphics Rendering

    ## "render" features:
    "bevy_render", # Rendering framework core
    "bevy_core_pipeline", # Higher-level rendering abstractions
    # "bevy_sprite", # 2D (sprites) rendering
    "bevy_pbr", # 3D (physically-based) rendering
    "bevy_gltf", # GLTF 3D assets format support
    "bevy_text", # Text/font rendering
    "bevy_ui", # UI toolkit

    ## functionality:
    "x11", # Linux: Support X11 windowing system
    "wayland", # Linux: Support Wayland windowing system
    "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
    "serialize", # Support for `serde` Serialize/Deserialize

    ## file formats:
    "ktx2",
    "dds",
    "png",
    "hdr",
    "basis-universal",
    "zstd",
    # "vorbis",
    # "jpeg",
    # "bmp",
    # "tga",
    # "flac",
    # "mp3",
    # "wav",

    ## development / debug features:
    # "dynamic", # Dynamic linking for faster compile-times
    # "trace", # Enable tracing for performance measurement
    # "trace_tracy", # Tracing using `tracy`
    # "trace_chrome", # Tracing using the Chrome format
    # "wgpu_trace", # WGPU/rendering tracing
]

[dependencies.bevy_kira_audio]
version = "0.9.0"
default-features = false
features = ["ogg"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
