[package]
name = "stunning_enigma"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_gilrs",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/bevy_winit",
    "bevy/hdr",
    "bevy/png",
    "bevy/serialize",
    "bevy/subpixel_glyph_atlas",
]

linux = [
    "bevy/wayland",
    "bevy/x11",
]

native = [
    "bevy/basis-universal",
    "bevy/dds",
    "bevy/ktx2",
    "bevy/zlib",
    "bevy/zstd",
]

development = [
    "bevy/dynamic",
    "bevy/filesystem_watcher",
]

trace = [
    "bevy/trace",
    "bevy/trace_chrome",
    "bevy/trace_tracy",
    "bevy/wgpu_trace",
]

[dependencies]
# bevy_asset_loader = "0.10.0"
# bevy_config_cam = "0.3.0"
# bevy_egui = "0.14.0"
# bevy_mod_picking = "0.6.1"
# bevy_tweening = "0.4.0"
# big-brain = "0.11.0"
# heron = "3.0.1"
iyes_loopless = "0.9.1"
leafwing-input-manager = "0.7.1"

[target.'cfg(any(target_arch = "wasm32", target_arch = "wasm64"))'.dependencies]
console_error_panic_hook = "0.1.7"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies.mimalloc]
version = "0.1.32"
default-features = false
features = ["secure"]

[dependencies.bevy]
version = "0.9.1"
default-features = false

# [dependencies.bevy_kira_audio]
# version = "0.9.0"
# default-features = false
# features = ["bevy_kira_audio/ogg", "bevy_kira_audio/serde"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "fat"
